# DiamondPack

./: .clang-format  .gitignore  MANIFEST.in  README.md  build-and-upload.sh  pyproject.toml  requirements.txt  run-test.sh  run_test.py
.github/workflows/: dist.yaml
diamondpack/: __main__.py  config.py  dpconfig.py  dplog.py  pack.py  utils.py
diamondpack/app-templates/: CMakeLists.txt  app-linux.cpp  app-windows.cpp  app.bat  app.cpp  app.rc  app.sh  diamondpack-license.txt
test/: README.md  pyproject.toml  requirements.txt
test/examplePackage/: myGUI.py  myModule.py  myScript.py
