[build-system]
requires = ["setuptools>=58.3"]
build-backend = "setuptools.build_meta"

[project]
name = "example"
authors = [
    {name = "Alagyn", email = "fake@aol.com"}
]
version = "1.0.0"
description = "A test module for testing"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT License"}

[tool.setuptools]
packages = [
    "examplePackage"
]

