[build-system]
requires = ["setuptools>=58.3"]
build-backend = "setuptools.build_meta"

[project]
name = "example"
authors = [{ name = "Alagyn", email = "fake@aol.com" }]
version = "1.0.0"
description = "A test module for testing"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"

[project.scripts]
myScript = "examplePackage.myScript:main"

[project.gui-scripts]
gui = "examplePackage.myGUI:main"

[tool.setuptools]
packages = ["examplePackage"]

[tool.diamondpack]
mode = "app"
include-tk = true
stdlib-blacklist = ["email", "turtle", "unittest"]
# stdlib-whitelist = ["argparse", "re", "shutil", "fnmatch"]
data-globs = [["exampleData/data*.txt", "data"]]
debug-logs = true

[tool.diamondpack.icons]
gui = "diamondpack.ico"
